# new-ESP32-platform-firmware

./: .gitignore  .gitmodules  README.md  build.sh  clean.sh  config.sh  erase.sh  flash.sh  install.sh  monitor.sh  setup.sh
config/defconfigs/: pixel_defconfig
firmware/: .gitignore  CMakeLists.txt  manifest.py  sdkconfig
firmware/components/driver_bus_i2c/: CMakeLists.txt  driver_i2c.c  modi2c.c  project_include.cmake
firmware/components/driver_bus_vspi/: CMakeLists.txt
firmware/components/driver_display_eink/: CMakeLists.txt
firmware/components/driver_display_erc12864/: CMakeLists.txt
firmware/components/driver_display_flipdotter/: CMakeLists.txt
firmware/components/driver_display_fri3d/: CMakeLists.txt
firmware/components/driver_display_generic_i2c/: CMakeLists.txt
firmware/components/driver_display_gxgde0213b1/: CMakeLists.txt
firmware/components/driver_display_hub75/: CMakeLists.txt  compositor.c  i2s_parallel.c  modhub75.c  project_include.cmake
firmware/components/driver_display_ili9341/: CMakeLists.txt
firmware/components/driver_display_ledmatrix/: CMakeLists.txt
firmware/components/driver_display_nokia6100/: CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  main.c  platform.c  project_include.cmake
firmware/manifests/: example_manifest.py
firmware/modules/: hello_world.py
manifests/: manifest.py  pixel.py
python_modules/common/: _boot.py
python_modules/pixel/: _buttons.py  ble_scan_demo.py  boot.py  launcher.py  rgb.py  system.py  term.py  valuestore.py  wifi.py
(+11 files in other folders)
